objects/Objective__c.object
<CustomObject>
    <fields>
        <fullName>Measurement__c</fullName>
        <label>Measurement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Goal</label>
        <referenceTo>Strategic_Goal__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>R00N300000018uyrEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Objective</label>
    <nameField>
        <label>Objective</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>